fix: Center expand icon for collapsed fieldsets (#1798)

--- a/src/unfold/styles.css
+++ b/src/unfold/styles.css
@@ -498,7 +498,7 @@ fieldset details > summary {
 }
 
 fieldset details > summary:after {
-  @apply material-symbols-outlined absolute cursor-pointer right-3 top-3.5;
+  @apply material-symbols-outlined absolute cursor-pointer right-3 top-2.5;
   content: "expand_more";
 }
 
